--- a/src/NEFDashboard/containers/login/login.css
+++ b/src/NEFDashboard/containers/login/login.css
@@ -111,3 +111,8 @@
 .signup-text span {
   color: var(--Nef-blue, #078bb9);
 }
+@media screen and (max-width: 767px) {
+  .auth-form {
+    max-width: 100%;
+  }
+}
